# archer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: data.yaml  events.yaml  universe.yaml
data/bronze/VXX/: 20260708T042033Z_yfinance.manifest.json  20260708T042111Z_yfinance.manifest.json  20260708T042111Z_yfinance.parquet  20260708T042401Z_yfinance.manifest.json  20260708T042800Z_yfinance.manifest.json
data/silver/: VXX.manifest.json  VXX.parquet
reports/: dm_mse.csv  dm_qlike.csv  forecast_panel.manifest.json  mse_by_year.csv  mz_calibration.csv  overall_mse.csv  overall_qlike.csv  qlike_by_year.csv
scripts/: run_forecast_eval.py  smoke_fit_har.py
src/archer/: cli.py  errors.py
src/archer/analytics/: dm.py  losses.py  mz.py  panel.py  plots.py  report.py  walkforward.py
src/archer/data/: cleaner.py  gates.py  ingest.py  loader.py  returns.py  sources.py  store.py  universe.py
src/archer/features/: implied_vol.py  realized_vol.py
src/archer/models/: base.py  benchmarks.py  dataset.py  fold.py  garch.py  har.py
tests/: test_benchmarks.py  test_data_doctrine.py  test_dm.py  test_fold.py  test_forecast_plots.py  test_forecaster_protocol.py  test_garch.py  test_har.py  test_implied_vol.py  test_losses.py  test_mz.py  test_prediction_panel.py  test_realized_vol.py  test_report.py  test_returns.py  test_vol_dataset.py  test_walkforward.py
