[project]
name = "archer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pandas-market-calendars>=5.4.0",
    "pyarrow>=24.0.0",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "statsmodels>=0.14.6",
    "yfinance>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project.scripts]
archer = "archer.cli:main"
