[project]
name = "archer"
version = "0.2.0"
description = "Leakage-safe S&P 500 volatility forecasting with purged walk-forward evaluation."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Daniel Díaz de León Morales" },
]
requires-python = ">=3.12"
dependencies = [
    "arch>=8.0.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pandas-market-calendars>=5.4.0",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "statsmodels>=0.14.6",
    "yfinance>=1.5.1",
]

[project.scripts]
archer = "archer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.ruff]
target-version = "py312"
line-length = 88